# searchlab

./: .env.example  .gitignore  CONSTITUTION.md  README.md  backlog.md  docker-compose.yml  pom.xml  run-smoke.sh  searchlab  substack-post.md
searchlab-eval/: .gitignore  mission.md  pyproject.toml  roadmap.md  tech-stack.md
searchlab-eval/results/bm25_phase0/: ir_scores.json  raw_results.json
searchlab-eval/results/fiqa-20260615T000717Z/: raw_results.json
searchlab-eval/results/fiqa-20260615T001221Z/: raw_results.json
searchlab-eval/results/fiqa-bm25-phase0/: ir_scores.json  raw_results.json
searchlab-eval/results/my-test-run/: ir_scores.json  raw_results.json
searchlab-eval/results/nfcorpus-20260615T000850Z/: ir_scores.json  raw_results.json
searchlab-eval/results/nfcorpus-20260616T132907Z/: ir_scores.json  raw_results.json
searchlab-eval/results/nfcorpus-ragas-20260618T214452Z/: rag_results.json
searchlab-eval/searchlab_eval/: __main__.py  cli.py  dataset_utils.py  downloader.py  hf_downloader.py  ingestor.py  querier.py  rag_eval.py  slicer.py
searchlab-eval/searchlab_eval/metrics/: ir.py
searchlab-eval/specs/2026-05-26-dataset-download/: Plan.md  Validation.md  requirements.md
searchlab-eval/specs/2026-05-26-ingest/: Plan.md  Validation.md  requirements.md
searchlab-eval/specs/2026-05-26-ir-metrics/: Plan.md  Validation.md  requirements.md
searchlab-eval/specs/2026-05-26-query/: Plan.md  Validation.md  requirements.md
searchlab-eval/tests/: test_cli.py  test_download.py  test_ingest.py  test_ir_metrics.py  test_query.py
service/: pyproject.toml
service/schemas/: searchlab-fiqa-analyzer.json  searchlab-fiqa-shingles.json  searchlab-nfcorpus-fieldboost.json
service/searchlab/: cli.py  config.py  main.py
service/searchlab/data/: index_registry.json
service/searchlab/ingest/: chunker.py  indexer.py  pdf_parser.py
service/searchlab/opensearch/: client.py  index_admin.py  index_bootstrap.py  index_registry.py
service/searchlab/rag/: __init__.py  context_builder.py  llm_client.py  models.py
service/searchlab/search/: bm25_searcher.py
service/searchlab/web/: compare.py  html.py  (+1 more)
service/tests/: test_bm25_searcher.py  test_chunker.py  test_compare.py  test_context_builder.py  test_index_admin.py  test_index_registry.py  test_llm_client.py  test_routes.py
(+59 files in other folders)
