[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "searchlab-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beir>=2.0.0",
    "click>=8.1",
    "jinja2>=3.1",
    "langchain-google-vertexai>=3.2.4",
    "numpy>=1.26",
    "pandas>=2.0",
    "pytrec-eval-terrier>=0.5",
    "ragas==0.2.10",
    "requests>=2.28",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
]

[project.scripts]
searchlab-eval = "searchlab_eval.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["searchlab_eval"]

[tool.pytest.ini_options]
markers = ["integration: requires network access (deselect with -m 'not integration')"]
